# tuxvantage

./: Cargo.toml  README.md
assets/: bcm.service  tuxvantage
src/: anyhow_with_tip.rs  args.rs  config.rs  context.rs  ext.rs  machine.rs  macros.rs  main.rs  utils.rs  verbose.rs
src/app/: battery_conservation.rs  mod.rs  profiles.rs  rapid_charge.rs  system_performance.rs
src/log/: mod.rs  no_prologue.rs
src/project_paths/: mod.rs  profiles.rs
