[package]
name = "tuxvantage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
atty = "0.2.14"
battery = "0.7.8"
clap = { version = "3.0.0-rc.11", features = ["derive"] }
color-backtrace = "0.5.1"
directories = "4.0.1"
env_logger = "0.9.0"
ideapad = { path = "../ideapad", features = ["serde"] }
itertools = "0.10.3"
log = "0.4.14"
once_cell = "1.9.0"
owo-colors = "3.2.0"
parking_lot = "0.11.2"
paste = "1.0.6"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
tap = "1.0.1"
textwrap = "0.14.2"
toml = "0.5.8"
